Ignore httpclient files

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
+### Http client ###
+*.http
+
 ### Java ###
 # Compiled class file
 *.class
