--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>eureka-server</module>
+        <module>utilisateur-service</module>
     </modules>
 
     <properties>
