--- a/element-service/src/main/resources/example.application-dev.yml
+++ b/element-service/src/main/resources/example.application-dev.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 50001
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/example-db
-    username: example-user
-    password: password
+    url: jdbc:mysql://localhost:3306/element-db
+    username: root
+    password: elbouchouki
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
@@ -17,4 +17,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone:
+    fetch-registry: false
+    register-with-eureka: false
