--- a/departement-service/pom.xml
+++ b/departement-service/pom.xml
@@ -6,11 +6,10 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>ma.enset</groupId>
     <artifactId>departement-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>departement-service</name>
     <description>departement-service</description>
     <properties>
@@ -51,17 +50,10 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
-        <!-- For Model/DTO mapping -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -104,11 +96,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
-                    <!--
-                        Usually lombok does not need to be added to the annotation processor paths
-                        but when adding other annotation processors (mapstruct in our case)
-                        we must add lombok as well else it won't work
-                    -->
+
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
