--- a/departement-service/src/main/resources/application.properties
+++ b/departement-service/src/main/resources/application.properties
@@ -25,5 +25,5 @@ endpoints.shutdown.enabled=true
 management.endpoint.shutdown.enabled=true
 
 ## Configuring messages
-spring.messages.basename=messages
+spring.messages.basename=messages.messages
 spring.messages.encoding=UTF-8
