--- a/semestre-service/src/main/resources/application.properties
+++ b/semestre-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=semestre-service
-server.port=
 ## Database
 
 spring.datasource.url=
@@ -26,5 +25,5 @@ endpoints.shutdown.enabled=true
 management.endpoint.shutdown.enabled=true
 
 ## Configuring messages
-spring.messages.basename=messages
+spring.messages.basename=messages.messages
 spring.messages.encoding=UTF-8
