--- a/filiere-service/src/main/resources/application.properties
+++ b/filiere-service/src/main/resources/application.properties
@@ -17,12 +17,12 @@ eureka.client.serviceUrl.defaultZone =
 ## Configuring logging
 info.app.name=Filiere & RegleDeCalcul Microservice
 info.app.description=Deliberation Filiere& RegleDeCalcul Application
-info.app.version=1.0.0
+info.app.version=1.0.1
 management.info.env.enabled = true
 
 endpoints.shutdown.enabled=true
 management.endpoint.shutdown.enabled=true
 
 ## Configuring messages
-spring.messages.basename=messages
+spring.messages.basename=messages.messages
 spring.messages.encoding=UTF-8
