Added CRUD to note module and note element

--- a/note-service/src/main/resources/application.yml
+++ b/note-service/src/main/resources/application.yml
@@ -3,7 +3,10 @@ server:
 
 spring:
     application:
-        name: module-service
+        name: note-service
+
+    banner:
+        location: classpath:banner.txt
 
     profiles:
         active: dev
