--- a/note-service/pom.xml
+++ b/note-service/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>module-service</artifactId>
+    <artifactId>note-service</artifactId>
 
     <properties>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
