--- a/note-service/src/main/resources/application.yml
+++ b/note-service/src/main/resources/application.yml
@@ -30,3 +30,5 @@ eureka:
     client:
         service-url:
             defaultZone:
+        fetch-registry: true
+        register-with-eureka: true
