--- a/module-service/src/main/resources/application.yml
+++ b/module-service/src/main/resources/application.yml
@@ -18,9 +18,10 @@ spring:
 
     messages:
         basename: messages.messages
-        encoding: UTF-8
 
 eureka:
+    instance:
+        prefer-ip-address: true
     client:
         service-url:
             defaultZone:
