Prefer IP address over the hostname reported by the OS

--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
   port:
   
 eureka:
+  instance:
+    prefer-ip-address: true
   client:
     fetch-registry: false
     register-with-eureka: false
