--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>departement-service</module>
         <module>filiere-service</module>
         <module>semestre-service</module>
+        <module>session-universitaire-service</module>
     </modules>
 
     <properties>
