--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <modules>
         <module>eureka-server</module>
+        <module>gateway-server</module>
         <module>module-service</module>
         <module>element-service</module>
         <module>utilisateur-service</module>
@@ -38,6 +39,9 @@
         <snakeyaml.version>2.0</snakeyaml.version>
 
         <lombok.version>1.18.26</lombok.version>
+
+        <springdoc.version>2.0.4</springdoc.version>
+
     </properties>
 
 
@@ -57,6 +61,14 @@
                 <version>${spring-cloud-dependencies.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi</artifactId>
+                <version>${springdoc.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
