--- a/utilisateur-service/pom.xml
+++ b/utilisateur-service/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.2</version>
+        </dependency>
 
     </dependencies>
 
