--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>filiere-service</module>
         <module>semestre-service</module>
         <module>session-universitaire-service</module>
+        <module>note-service</module>
     </modules>
 
     <properties>
