--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -46,6 +46,9 @@ springdoc:
       - url: /element-service/docs
         name: Element Service
         primaryName: Element Service
+      - url: /deliberation-service/docs
+        name: Deliberation Service
+        primaryName: Deliberation Service
 
 
 
