--- a/deliberation-service/pom.xml
+++ b/deliberation-service/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>deliberations-service</artifactId>
+    <artifactId>deliberation-service</artifactId>
 
     <properties>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
