--- a/deliberation-service/src/main/resources/application-dev.yml
+++ b/deliberation-service/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: false
