--- a/filiere-service/src/main/resources/application.yaml
+++ b/filiere-service/src/main/resources/application.yaml
@@ -1,20 +1,23 @@
 server:
-  port:
+  port: 50001
 
 spring:
   application:
     name: filiere-service
 
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/filiere-db?useSSL=true&createDatabaseIfNotExist=true
+    username: root
+    password: elbouchouki
 
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
     hibernate:
-      ddl-auto: update
-    generate-ddl: true
-    database-platform:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: false
 
   messages:
     basename: messages.messages
@@ -23,4 +26,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone:
+      defaultZone: http://localhost:8761/eureka
