--- a/deliberation-service/src/main/resources/application.yaml
+++ b/deliberation-service/src/main/resources/application.yaml
@@ -1,20 +1,23 @@
 server:
-  port:
+  port: 50013
 
 spring:
   application:
     name: deliberation-service
 
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/deliberation-db?useSSL=true&createDatabaseIfNotExist=true
+    username: root
+    password: elbouchouki
 
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
     hibernate:
-      ddl-auto: update
-    generate-ddl: true
-    database-platform:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: false
 
   messages:
     basename: messages.messages
@@ -25,4 +28,4 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone:
+      defaultZone: http://localhost:8761/eureka
