--- a/departement-service/src/main/resources/application.yml
+++ b/departement-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port:
+  port: 50000
 
 
 spring:
@@ -8,15 +8,18 @@ spring:
 
 
     datasource:
-      url:
-      username:
-      password:
+      url: jdbc:mysql://localhost:3306/departement-db?useSSL=true&createDatabaseIfNotExist=true
+      username: root
+      password: elbouchouki
 
     jpa:
+      database-platform: org.hibernate.dialect.MySQLDialect
+      show-sql: false
       hibernate:
-        ddl-auto: update
-      generate-ddl: true
-      database-platform:
+        ddl-auto: create-drop
+      properties:
+        hibernate:
+          format_sql: false
 
     messages:
       basename: messages.messages
@@ -27,4 +30,4 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone:
+      defaultZone: http://localhost:8761/eureka
