--- a/inscription-pedagogique-service/src/main/resources/application.yml
+++ b/inscription-pedagogique-service/src/main/resources/application.yml
@@ -1,27 +1,30 @@
 server:
-    port:
+  port: 50016
 
 spring:
-    application:
-        name: inscription-pedagogique-service
+  application:
+    name: inscription-pedagogique-service
 
-    datasource:
-        url:
-        username:
-        password:
+  datasource:
+    url: jdbc:mysql://localhost:3306/inscription-db?useSSL=true&createDatabaseIfNotExist=true
+    username: root
+    password: elbouchouki
 
-    jpa:
-        hibernate:
-            ddl-auto: update
-        generate-ddl: true
-        database-platform:
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: false
 
-    messages:
-        basename: messages.messages
+  messages:
+    basename: messages.messages
 
 eureka:
-    instance:
-        prefer-ip-address: true
-    client:
-        service-url:
-            defaultZone:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
