--- a/deliberation-service/src/main/resources/application.yaml
+++ b/deliberation-service/src/main/resources/application.yaml
@@ -1,20 +1,20 @@
 server:
-  port:
+  port: ${SPRING_PORT}
 
 spring:
   application:
     name: deliberation-service
 
   datasource:
-    url:
-    username:
-    password:
+    url: ${SPRING_DATASOURCE_URL}
+    username:  ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
     hibernate:
       ddl-auto: update
     generate-ddl: true
-    database-platform:
+    database-platform: ${SPRING_JPA_DATABASE_PLATFORM}
 
   messages:
     basename: messages.messages
@@ -25,4 +25,4 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone:
+      defaultZone: ${SPRING_EUREKA_URI}
