--- a/departement-service/src/main/resources/application.yml
+++ b/departement-service/src/main/resources/application.yml
@@ -1,30 +1,28 @@
 server:
-  port:
-
+  port: ${SPRING_PORT}
 
 spring:
   application:
     name: departement-service
 
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username:  ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
 
-    datasource:
-      url:
-      username:
-      password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    generate-ddl: true
+    database-platform: ${SPRING_JPA_DATABASE_PLATFORM}
 
-    jpa:
-      hibernate:
-        ddl-auto: update
-      generate-ddl: true
-      database-platform:
-
-    messages:
-      basename: messages.messages
-      encoding: UTF-8
+  messages:
+    basename: messages.messages
+    encoding: UTF-8
 
 eureka:
   instance:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone:
+      defaultZone: ${SPRING_EUREKA_URI}
