--- a/note-service/src/main/resources/application.yml
+++ b/note-service/src/main/resources/application.yml
@@ -1,27 +1,28 @@
 server:
-  port:
+  port: ${SPRING_PORT}
 
 spring:
   application:
     name: note-service
 
   datasource:
-    url:
-    username:
-    password:
+    url: ${SPRING_DATASOURCE_URL}
+    username:  ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
     hibernate:
       ddl-auto: update
     generate-ddl: true
-    database-platform:
+    database-platform: ${SPRING_JPA_DATABASE_PLATFORM}
 
   messages:
     basename: messages.messages
+    encoding: UTF-8
 
 eureka:
   instance:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone:
+      defaultZone: ${SPRING_EUREKA_URI}
