--- a/pom.xml
+++ b/pom.xml
@@ -120,5 +120,19 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <to>
+                        <image>
+                            ${project.artifactId}:${project.version}
+                        </image>
+                    </to>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
